--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,8 @@
         <item name="android:layout_weight">1</item>
         <item name="android:backgroundTint">@color/yellow</item>
         <item name="android:textColor">@color/brown</item>
+        <item name="android:textSize">30sp</item>
         <item name="cornerRadius">10dp</item>
-
     </style>
 
     <style name="SignBtn">
@@ -20,6 +20,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:backgroundTint">@color/orange</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">30sp</item>
         <item name="cornerRadius">10dp</item>
     </style>
 
@@ -30,9 +31,8 @@
         <item name="android:layout_weight">1</item>
         <item name="android:backgroundTint">@color/brown</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">30sp</item>
         <item name="cornerRadius">10dp</item>
-
-
     </style>
 
 </resources>
